# liga-hessen-news-aggregator

./: .gitignore  CLAUDE.md
news-aggregator/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  config.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  schemas_config.py
news-aggregator/backend/api/: __init__.py  admin.py  analytics.py  config.py  connectors.py  email.py  items.py  llm.py  motd.py  proxies.py  rules.py  scheduler.py  sources.py  stats.py
news-aggregator/backend/connectors/: __init__.py  base.py  bluesky.py  google_alerts.py  html.py  instagram.py  instagram_scraper.py  linkedin.py  mastodon.py  pdf.py  registry.py  rss.py  telegram.py  twitter.py  x_scraper.py
news-aggregator/backend/migrations/: add_detailed_analysis.py  add_is_stakeholder.py  add_manual_review_tracking.py  add_needs_llm_processing.py  add_processing_logs.py  add_source_identifier.py  migrate_to_channels.py
news-aggregator/backend/scripts/: backfill_topics.py  db_backup.py  extract_chrome_cookies.py  extract_linkedin_cookies.py  fetch_sources.sh  x_auth.py
news-aggregator/backend/services/: __init__.py  article_extractor.py  browser_pool.py  classifier_worker.py  email.py  eurostat_metadata.py  gpu1_power.py  item_events.py  llm_worker.py  pipeline.py  processing_logger.py  processor.py  proxy_manager.py  relevance_filter.py  scheduler.py  topic_taxonomy.py  worker_status.py
news-aggregator/backend/tests/: conftest.py  test_admin_api.py  test_api.py  test_api_channels.py  test_article_extractor.py  test_classifier_toggles.py  (+22 more)
(+152 files in other folders)
