[project]
name = "news-aggregator"
version = "0.4.0"
description = "News Aggregator with pluggable connectors"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Database (PostgreSQL only)
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # HTTP client
    "httpx>=0.28.0",

    # Data validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # Parsing
    "feedparser>=6.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "PyMuPDF>=1.25.0",

    # Scheduling
    "apscheduler>=3.10.0",

    # Utilities
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
